# Coursera-ML-by-Andrew-Ng

./: .gitignore  pyproject.toml  readme.md
contrib/: octive_kernel_config.py
ex1/: readme.md
ex1/octave/libs/: computeCost.m  computeCostMulti.m  featureNormalize.m  gradientDescent.m  gradientDescentMulti.m  normalEqn.m  plotData.m
ex1/octave/notebooks/: ex1.ipynb  ex1_multi.ipynb  functions.ipynb
ex1/python/libs/: __init__.py  functions.py
ex1/python/notebooks/: ex1.ipynb  ex1_mini_batch.ipynb  ex1_multi.ipynb
ex2/: readme.md
ex2/octave/libs/: costFunction.m  costFunctionReg.m  mapFeature.m  plotData.m  plotDecisionBoundary.m  plotDecisionBoundary2.m  predict.m  sigmoid.m
ex2/octave/notebooks/: ex2.ipynb  ex2_reg.ipynb  functions.ipynb
ex2/python/libs/: __init__.py  functions.py
ex2/python/notebooks/: ex2.ipynb
ex3/: readme.md
ex3/octave/libs/: dense.m  displayData.m  lrCostFunction.m  oneVsAll.m  predict.m  predictOneVsAll.m  sequencial.m  vectorizedPredict.m
ex3/octave/notebooks/: ex3.ipynb  functions.ipynb
ex3/python/libs/: __init__.py  functions.py
ex3/python/notebooks/: ex3.ipynb
ex4/: readme.md
ex4/octave/libs/: checkNNGradients.m  computeNumericalGradient.m  costFunction.m  debugInitializeWeights.m  hypothesis.m  nnCostFunction.m  nnGradFunction.m  predict.m  randInitializeWeights.m  sigmoidGradient.m
ex4/octave/notebooks/: ex4.ipynb  functions.ipynb
ex4/python/libs/: __init__.py  functions.py
ex4/python/notebooks/: ex4.ipynb
ex5/: readme.md
ex5/octave/libs/: fmincg.m  (+10 more)
ex6/: readme.md
ex7/: readme.md
ex8/: readme.md
(+65 files in other folders)
